[workspace]
members = [
    "tcpserver",
    "tcpclient",
    "trafficlight",
    "shape",
    "sum",
    "node-template/node",
    "node-template/pallets/template",
    "node-template/pallets/poe",
    "node-template/pallets/kitties",
    "node-template/runtime",
]

[profile.release]
panic = "unwind"